--- a/cookie.yaml
+++ b/cookie.yaml
@@ -1,70 +1,5 @@
 openapi: 3.0.3
-
 info:
-  title: Login Page
+  title: Test
   version: "1.0.0"
-  description: |
-    <div class="login-form">
-      <div style="width: 100%; max-width: 400px; margin: 20px auto; padding: 20px; background: #f8d7da; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-        <div style="background-color: #f8d7da; color: #721c24; padding: 16px 20px; border-radius: 4px; border: 1px solid #f5c6cb; font-size: 16px; text-align: center;">
-          <strong>An error occurred while loading, please log in</strong>
-        </div>
-      </div>
-
-      <h1 style="text-align: center; font-size: 24px; color: #333; margin-bottom: 20px;">
-        Login Page
-      </h1>
-
-      <div style="width: 100%; max-width: 400px; margin: 0 auto; padding: 20px; background: #fff; border-radius: 8px; box-shadow: 0 4px 8px rgba(0,0,0,0.1);">
-        <form>
-          <div style="margin-bottom: 15px;">
-            <label>Username</label>
-            <input type="text" style="width:100%; padding:10px;">
-          </div>
-
-          <div style="margin-bottom: 15px;">
-            <label>Password</label>
-            <input type="password" style="width:100%; padding:10px;">
-          </div>
-
-          <button type="button" style="width:100%; padding:12px; background:#5cb85c; color:#fff; border:none; border-radius:4px;">
-            Login
-          </button>
-        </form>
-      </div>
-
-      <div style="position: fixed; bottom: 10px; right: 10px; font-size: 12px; color: #888;">
-        POC BY M4ST3R MIND
-      </div>
-    </div>
-
-servers:
-  - url: https://login.connect.iai.co.il
-
-paths:
-  /login:
-    post:
-      summary: User login
-      description: Authenticate user credentials
-      operationId: loginUser
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              required:
-                - username
-                - password
-              properties:
-                username:
-                  type: string
-                  example: admin
-                password:
-                  type: string
-                  example: secret
-      responses:
-        "200":
-          description: Login successful
-        "401":
-          description: Invalid credentials
+paths: {}
